# django_and_kubernetes

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: test-lint-build.yml
data/db/base/1/: 1259_vm  13578  13579_vm  13583  13584  13588  13589  2605_vm  2608  2610_vm  2615  2618  2619_vm  2658  2664  2679  2682  2692  2753_vm  2839  2841  3079  3080  3164  3394  3603  3603_vm  3605  3712
data/db/base/13755/: 1247_vm  1249  1255_vm  1259  13589_vm  2600_vm  2601_vm  2602_vm  2603_vm  2606  2606_vm  2607_vm  2609_vm  2612  2616_vm  2659  2662  2673  (+14 more)
data/db/global/: 1213_vm  1214  1214_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_13756.stat  global.stat
k8s/: configMaps.yaml  deployment.yaml  persistantVolume.yaml  persistantVolumeClaim.yaml  sealedsecret.yaml  services.yaml
notebooks/: model_dataframe.ipynb
practice_app/: admin.py  apps.py  feeds.py  models.py  sitemaps.py  tasks.py  tests.py  urls.py  views.py
practice_app/management/commands/: query_database.py
practice_app/migrations/: 0001_initial.py  0002_practicemodel_slug.py  0003_practicemodel_last_modified.py  0004_staticfilesmodel.py
scripts/: celery-beat-script.sh  celery-worker-script.sh  entrypoint.sh  query-database-script.sh
templates/: robots.txt
theme/static_src/: package-lock.json
training/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+49 files in other folders)
