[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
celery = "^5.4.0"
redis = "^5.0.8"
django-celery-beat = "^2.7.0"
pre-commit = "^3.8.0"
sentry-sdk = "^2.13.0"
djangorestframework = "^3.15.2"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.3"
jupyter = "^1.1.0"
notebook = "6.4.12"
traitlets = "5.9.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
environ = "^1.0"
python-dotenv = "^1.0.1"
django-mdeditor = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
